--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -32,7 +32,7 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: us-east-q                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: us-east-1                # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: "913846010507.dkr.ecr.us-east-1.amazonaws.com"
   ECS_SERVICE: "show-runner-service"                 # set this to your Amazon ECS service name
   ECS_CLUSTER: "show-runner-cluster"                 # set this to your Amazon ECS cluster name
