--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -33,7 +33,7 @@ on:
 
 env:
   AWS_REGION: us-east-1                # set this to your preferred AWS region, e.g. us-west-1
-  ECR_REPOSITORY: "913846010507.dkr.ecr.us-east-1.amazonaws.com"
+  ECR_REPOSITORY: show-runner
   ECS_SERVICE: "show-runner-service"                 # set this to your Amazon ECS service name
   ECS_CLUSTER: "show-runner-cluster"                 # set this to your Amazon ECS cluster name
   ECS_TASK_DEFINITION: task_definision.json
